Changed CSS for blockquote, to fix blockquotes overlapping user author box in comments, as discussed in issue #472

--- a/sites/all/themes/sigmah_theme/new_css/style.css
+++ b/sites/all/themes/sigmah_theme/new_css/style.css
@@ -1292,9 +1292,10 @@ text-decoration:none;
 
 blockquote {
 background: #fff4D8;
-padding : 1px 20px;
-padding-top : 15px;
-padding-botton : 15px;
+padding-left : 3px;
+padding-right : 3px;
+padding-top : 1px;
+padding-bottom : 1px;
 border-left : #f6b034 1px solid;
 border-right : #f6b034 1px solid;
 width : 100%;
